Replace file from symlink

--- a/demo/publicTemplate/css/CheckableListItem.css
+++ b/demo/publicTemplate/css/CheckableListItem.css
@@ -1,1 +1,1 @@
-../../../node_modules/draft-js-checkable-list-item/lib/CheckableListItem.css
+.checkable-list-item{list-style:none;transform:translateX(-1.5em)}.checkable-list-item-block__checkbox{position:absolute;z-index:1;cursor:default}.checkable-list-item-block__text{padding-left:1.5em}
