--- a/demo/client/components/DemoEditor/styles.css
+++ b/demo/client/components/DemoEditor/styles.css
@@ -1,20 +1,13 @@
 .root {
-  background: #FFF;
+  background: #fff;
   height: 100%;
   position: relative;
+  max-width: 50em;
+  margin: 0 auto;
 }
 
 .editor {
-  margin: 2.5% auto 0 auto;
-  height: 95%;
-  width: 95%;
-}
-
-.placeholder {
-  color: #ccc;
-  font-size: 1em;
-  position: absolute;
-  width: 95%;
-  top: 0;
-  left: 2.5%;
+  padding: 2.5%;
+  height: 100%;
+  width: 100%;
 }
