--- a/demo/client/components/DemoEditor/styles.css
+++ b/demo/client/components/DemoEditor/styles.css
@@ -11,3 +11,37 @@
   height: 100%;
   width: 100%;
 }
+
+pre {
+  background: #f9f9f9;
+  padding: 0.2em 0.5em;
+  position: relative;
+}
+
+.switcherContainer {
+  position: absolute;
+  text-align: right;
+  bottom: -23px;
+  right: 3px;
+}
+
+.switcher {
+  display: inline-block;
+  font-family: sans-serif;
+  color: #ccc;
+  letter-spacing: 0.05em;
+  font-size: 12px;
+  padding: 0.3em;
+  cursor: pointer;
+  position: relative;
+}
+
+.switcherSelect {
+  position: absolute;
+  top: 0;
+  cursor: pointer;
+  opacity: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
